hphp/hack/test/typecheck/array_map6.php.exp
File "array_map6.php", line 8, characters 21-22:
Invalid argument (Typing[4110])
File "array_map6.php", line 4, characters 18-20:
This is an int
File "array_map6.php", line 6, characters 13-18:
It is incompatible with a string
